<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white">

        <View
            android:id="@+id/view0_update"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/plain_gray" />

        <RelativeLayout
            android:id="@+id/oldpasswordlayout_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view0_update"
            android:layout_marginLeft="@dimen/sp10"
            android:layout_marginRight="@dimen/sp10">

            <CheckBox
                android:id="@+id/oldpasswordshow_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:button="@drawable/selector_password_green" />

            <EditText
                android:id="@+id/oldpassword_update"
                style="@style/textview_color_back_gray_singleLine_size17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/oldpasswordshow_update"
                android:background="@null"
                android:drawableLeft="@drawable/register_icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/oldpassone"
                android:inputType="textPassword"
                android:padding="@dimen/common_measure_30sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view1_update"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/oldpasswordlayout_update"
            android:background="@color/plain_gray" />

        <View
            android:id="@+id/view5_update"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/view1_update"
            android:layout_marginBottom="@dimen/common_measure_30sp"
            android:background="@color/plain" />

        <View
            android:id="@+id/view6_update"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/view5_update"
            android:background="@color/plain_gray" />

        <RelativeLayout
            android:id="@+id/passwordlayour_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view6_update"
            android:layout_marginLeft="@dimen/sp10"
            android:layout_marginRight="@dimen/sp10">

            <CheckBox
                android:id="@+id/passwordshow_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:button="@drawable/selector_password_green" />

            <EditText
                android:id="@+id/password_update"
                style="@style/textview_color_back_gray_singleLine_size17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/passwordshow_update"
                android:background="@null"
                android:drawableLeft="@drawable/register_icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/passone_name"
                android:inputType="textPassword"
                android:padding="@dimen/common_measure_30sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view2_update"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/passwordlayour_update"
            android:layout_marginLeft="@dimen/sp10"
            android:layout_marginRight="@dimen/sp10"
            android:background="@color/plain_gray" />

        <RelativeLayout
            android:id="@+id/passtwolayout_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2_update"
            android:layout_marginLeft="@dimen/sp10"
            android:layout_marginRight="@dimen/sp10">

            <CheckBox
                android:id="@+id/passtwoshow_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:button="@drawable/selector_password_green" />


            <EditText
                android:id="@+id/passtwo_update"
                style="@style/textview_color_back_gray_singleLine_size17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/passtwoshow_update"
                android:background="@null"
                android:drawableLeft="@drawable/register_icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/passtwo_name"
                android:inputType="textPassword"
                android:padding="@dimen/common_measure_30sp" />

        </RelativeLayout>

        <View
            android:id="@+id/view3_update"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/passtwolayout_update"
            android:layout_marginLeft="@dimen/sp10"
            android:layout_marginRight="@dimen/sp10"
            android:background="@color/plain_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view3_update"
            android:layout_marginLeft="@dimen/sp10"
            android:layout_marginRight="@dimen/sp10"
            android:layout_marginTop="@dimen/sp10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/error_update"
                style="@style/textview_color_red_size17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="邮箱格式不正确"
                android:visibility="gone" />

            <Button
                android:id="@+id/commitgo_update"
                style="@style/textview_color_white_size18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sp10"
                android:background="@drawable/button_circular5_light_gray"
                android:text="@string/determine" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
